Web Inspector: Dark Mode: Layers tab background should be dark https://bugs.webkit.org/show_bug.cgi?id=187660 <rdar://problem/42179616>
Reviewed by Brian Burg.

* UserInterface/Views/Layers3DContentView.js:
(WI.Layers3DContentView.prototype.initialLayout):
* UserInterface/Views/Variables.css:
(:root):


Canonical link: https://commits.webkit.org/203060@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234076 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/Variables.css
+++ b/Source/WebInspectorUI/UserInterface/Views/Variables.css
@@ -32,6 +32,8 @@
     --z-index-glass-pane-for-drag: 2048;
     --z-index-uncaught-exception-sheet: 4096;
 
+    --background-color-content: white;
+
     --selected-foreground-color: white;
     --selected-secondary-text-color: hsla(0, 100%, 100%, 0.7);
     --selected-background-color: hsl(212, 92%, 54%);
